plugin/testData/annotator/perl/unreachableCode/givenWhenDefaultPostfix.code
sub subname {
    say 'start';
    given($something){
        say 'before';
        say $a when($a);
        say 'mid';
        default{
            say $c;
        }
        say '<error descr="Unreachable code">after</error>';
    }
    say 'end';
}
